2.07/manifests/database.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: logger-ponger
  labels:
    app: postgres-db
spec:
  ports:
  - port: 5432
    targetPort: db-port
    name: uulaalaa
  clusterIP: None
  selector:
    app: postgres-db
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-db
  namespace: logger-ponger
spec:
  serviceName: postgres-svc
  replicas: 1
  selector:
    matchLabels:
      app: postgres-db
  template:
    metadata:
      labels:
        app: postgres-db
    spec:
      containers:
        - name: postgres
          image: postgres:14
          ports:
            - name: db-port
              containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-path
        resources:
          requests:
            storage: 100Mi
