2.07/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logger-ingress
  namespace: logger-ponger
spec:
  rules:
  - http:
      paths:
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: ponger-svc
            port:
              number: 4567
      - path: /
        pathType: Prefix
        backend:
          service:
            name: logger-svc
            port:
              number: 2345
